# music-recommendation

./: .gitignore  package-lock.json  package.json
backend/: .env  package-lock.json  package.json  pyproject.toml  recommend_api.py  requirements.txt  server.js
backend/config/: db.js
backend/data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-4622101731867554079.wt  collection-2-4622101731867554079.wt  index-1-4622101731867554079.wt  index-3-4622101731867554079.wt  sizeStorer.wt
backend/data/db/diagnostic.data/: metrics.2025-03-14T12-44-14Z-00000  metrics.2025-03-17T09-54-51Z-00000
backend/middleware/: authMiddleware.js
backend/models/: Playlist.js  Song.js  User.js
backend/recommendation/: recommendation_engine.py
backend/routes/: authRoutes.js  playlistRoutes.js  songRoutes.js
frontend/: package-lock.json  package.json
frontend/.vercel/: project.json
frontend/src/: App.js  Auth.js
frontend/src/components/: Recommendations.js
