[tool.poetry]
name = "music-recommendation-python"
version = "0.1.0"
description = "Flask API for music recommendations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"